--- a/css/styles.css
+++ b/css/styles.css
@@ -240,15 +240,30 @@ footer {
 }
 
 .hero {
+  height: 600px;
+  max-width: 1600px;
+  margin-right: auto;
+  margin-left: auto;
+
   padding-top: 200px;
   padding-bottom: 200px;
 
   text-align: center;
 
   background-color: var(--bg-dark);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url('../images/hero_optimazed.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
-.visually-hidden {
+.hero-content .visually-hidden,
+.benefits .visually-hidden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
   clip: rect(1px, 1px, 1px, 1px);
@@ -296,6 +311,13 @@ footer {
 .benefit-list .item + .item {
   margin-left: 30px;
 }
+
+/* .benefit-list > .item:nth-child(3n)::before {
+  content: '';
+  width: 70px;
+  height: 70px;
+  background-image: url('../images/antena.png');
+} */
 
 .team {
   background-color: var(--secondary-bg-color);
