--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ body {
 }
 
 .navigation .link,
-.contacts .link {
+.contacts-link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -114,18 +114,19 @@ body {
 .contacts {
   display: flex;
   margin-left: auto;
+  align-items: center;
 }
 
 .contacts .item + .item {
   margin-left: 50px;
 }
 
-.contacts .link {
+.contacts-link {
   color: var(--primary-text-color);
 }
 
 .navigation .link,
-.contacts .link {
+.contacts-link {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 14px;
@@ -133,10 +134,16 @@ body {
   letter-spacing: 0.02em;
 }
 
+.contact-icon {
+  margin-right: 10px;
+
+  fill: currentColor;
+}
+
 .navigation .link:hover,
-.contacts .link:hover,
+.contacts-link:hover,
 .navigation .link:focus,
-.contacts .link:focus {
+.contacts-link:focus {
   color: var(--accent-color);
 }
 
@@ -359,6 +366,7 @@ footer {
 
 .team-list > .item {
   width: calc((100% - 90px) / 4);
+  padding-bottom: 30px;
 
   background-color: var(--white);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -368,6 +376,28 @@ footer {
 
 .team-list > .item:not(:last-child) {
   margin-right: 30px;
+}
+
+.social-list {
+  display: flex;
+  justify-content: center;
+}
+
+.social-link {
+  display: block;
+  width: 44px;
+  height: 44px;
+
+  border-radius: 50%;
+  background-color: red;
+}
+
+.social-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-icon {
+  fill: AFB1B8;
 }
 
 .work-list {
@@ -406,7 +436,7 @@ footer {
 }
 
 .profession {
-  margin-bottom: 30px;
+  margin-bottom: 16px;
 }
 
 .filter-button {
